canary-deployment-withanalysis-example/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 50}
      - analysis:
          templates:
          - templateName: canary-check
      # - args:
      #   - name: host
      #     value: rollouts-demo
          args:
          - name: host
            value: rollouts-demo
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        # image: argoproj/rollouts-demo:black
        image: particule/simplecolorapi:3.0
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m


# apiVersion: argoproj.io/v1alpha1
# kind: Rollout
# metadata:
#   name: colorapi
# spec:
#   replicas: 5
#   strategy:
#     canary:
#       steps:
#       - setWeight: 20
#       - pause: {duration: 10}
#       - analysis:
#           templates:
#           - templateName: webcheck
#       - args:
#         - name: host
#           value: colorapi
#       - setWeight: 40
#       - pause: {duration: 10}
#       - setWeight: 60
#       - pause: {duration: 10}
#       - setWeight: 80
#       - pause: {duration: 10}
#   revisionHistoryLimit: 2
#   selector:
#     matchLabels:
#       app: colorapi
#   template:
#     metadata:
#       labels:
#         app: colorapi
#     spec:
#       containers:
#       - name: colorapi
#         image: argoproj/rollouts-demo:blue
#         ports:
#         - name: http
#           containerPort: 8080
#           protocol: TCP
#         resources:
#           requests:
#             memory: 32Mi
#             cpu: 5m

# apiVersion: argoproj.io/v1alpha1
# kind: Rollout
# metadata:
#   name: rollouts-demo
# spec:
#   replicas: 5
#   strategy:
#     canary:
#       steps:
#       - setWeight: 20
#       - pause: {duration: 10}
#       - analysis:
#           templates:
#           - templateName: canary-check
#       - setWeight: 40
#       - pause: {duration: 10}
#       - setWeight: 60
#       - pause: {duration: 10}
#       - setWeight: 80
#       - pause: {duration: 10}
#   revisionHistoryLimit: 2
#   selector:
#     matchLabels:
#       app: rollouts-demo
#   template:
#     metadata:
#       labels:
#         app: rollouts-demo
#     spec:
#       containers:
#       - name: rollouts-demo
#         image: argoproj/rollouts-demo:blue
#         ports:
#         - name: http
#           containerPort: 8080
#           protocol: TCP
#         resources:
#           requests:
#             memory: 32Mi
#             cpu: 5m
