canary-deployment-withanalysis-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
  
# apiVersion: v1
# kind: Service
# metadata:
#   name: rollouts-demo
# spec:
#   ports:
#   - port: 80
#     targetPort: http
#     protocol: TCP
#     name: http
#   selector:
#     app: rollouts-demo
